# dofus-image-breaking-enhancement

./: .gitignore  CMakeLists.txt  ImgTypeEnum.h  LabelCreator.cpp  LabelCreator.h  PngEditor.cpp  PngEditor.h  README.md  TextWriter.cpp  TextWriter.h  main.cpp  main.h
exemples/labels/: 0.txt  1.txt  2.txt
mappers/: LabelMapper.cpp  LabelMapper.h
models/images/: AtelierImg.h  FenetreBrisageImg.h
models/labeling/dataset/: DatasetLabel.h  DatasetType.h
models/labeling/images/: CoefficientLabel.h  FenetreBrisageLabel.h  Label.h  NormalizedLabel.h  ObjetLabel.h  RuneLabel.h
models/text/: TextDimensions.h
utils/: FileSystemUtil.cpp  FileSystemUtil.h
